--- a/src/components/body/skills/Skill.css
+++ b/src/components/body/skills/Skill.css
@@ -32,6 +32,9 @@
   }
 }
 @media only screen and (max-width: 720px) {
+  .skills {
+    margin: 0 8%;
+  }
   .skills-list {
     max-width: 100%;
     justify-content: center;
